--- a/Entwatch Files/ze_S_A_M_v1_4.cfg
+++ b/Entwatch Files/ze_S_A_M_v1_4.cfg
@@ -37,7 +37,7 @@
 	}
 	"2" {
 		"name"              "Level 5 Quest Item"
-		"shortname"         "Quest5"
+		"shortname"         "Quest"
 		"color"             ""
 		"buttonclass"       ""
 		"filtername"        ""
@@ -73,7 +73,7 @@
 	}
 	"4" {
 		"name"              "Level 4 Quest Item"
-		"shortname"         "Quest4"
+		"shortname"         "Quest"
 		"color"             ""
 		"buttonclass"       ""
 		"filtername"        ""
@@ -91,7 +91,7 @@
 	}
 	"5" {
 		"name"              "Level 1 Quest Item"
-		"shortname"         "Quest1"
+		"shortname"         "Quest"
 		"color"             ""
 		"buttonclass"       ""
 		"filtername"        ""
