Edited Entwatch template with help.cfg

--- a/Entwatch Files/Entwatch template with help.cfg
+++ b/Entwatch Files/Entwatch template with help.cfg
@@ -53,8 +53,8 @@
 		"blockpickup"       "false"		// Try not to block powers unless they are bugged
 		"allowtransfer"     "false"		// false since it is a zombie powerup
 		"forcedrop"         "false"		// false since it is a zombie powerup
-		"chat"              "true"		// Can be true or false since it is a zombie powerup. Some servers like to hide info on zombie powerups and some like to show it. If false, "color" can be left blank.
-		"hud"               "true"		// Can be true or false since it is a zombie powerup. Some servers like to hide info on zombie powerups and some like to show it.
+		"chat"              "true"		// Can be true or false since it is a zombie powerup. Some servers like to hide info on zombie powerups and some like to show it. If false, "color" can be left blank. Still added to entwatch even if hidden to stop ebanned players from picking it up.
+		"hud"               "true"		// Can be true or false since it is a zombie powerup. Some servers like to hide info on zombie powerups and some like to show it. Still added to entwatch even if hidden to stop ebanned players from picking it up.
 		"hammerid"          "10831741"		// hammerid of the weapon_knife
 		"mode"              "2"			// 2 since it has unlimited uses but has a normal cooldown
 		"maxuses"           "0"			// 0 since "mode" is set to 2
@@ -93,8 +93,8 @@
 		"blockpickup"       "false"		// Try not to block powers unless they are bugged
 		"allowtransfer"     "false"		// false since it is a zombie powerup
 		"forcedrop"         "false"		// false since it is a zombie powerup
-		"chat"              "false"		// Can be true or false since it is a zombie powerup. Some servers like to hide info on zombie powerups and some like to show it. If false, "color" can be left blank.
-		"hud"               "false"		// Can be true or false since it is a zombie powerup. Some servers like to hide info on zombie powerups and some like to show it. If false, "color" can be left blank.
+		"chat"              "false"		// Can be true or false since it is a zombie powerup. Some servers like to hide info on zombie powerups and some like to show it. If false, "color" can be left blank. Still added to entwatch even if hidden to stop ebanned players from picking it up.
+		"hud"               "false"		// Can be true or false since it is a zombie powerup. Some servers like to hide info on zombie powerups and some like to show it. Still added to entwatch even if hidden to stop ebanned players from picking it up.
 		"hammerid"          "658120"		// hammerid of the weapon_knife
 		"mode"              "0"			// 0 since it doesn't have a button
 		"maxuses"           "0"			// 0 since "mode" is 0
