Edited Zombie Powerups to show information to both teams
I was convinced that all powerups should show to both teams if they arent useless. Since zombies can play around human powers by seeing cooldown, humans should be allowed to do the same to zombies.
From now on, only hidden info will be useless items, items where there are so many that they will spam chat if not hidden, and items that aren't pistols for humans (so it doesnt mess with the hud trying to show 2 items on a human).

--- a/Entwatch Files/ze_Ancient_wrath_r4.cfg
+++ b/Entwatch Files/ze_Ancient_wrath_r4.cfg
@@ -99,8 +99,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "2109055"
 		"mode"              "0"
 		"maxuses"           "0"
@@ -117,8 +117,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "2109516"
 		"mode"              "0"
 		"maxuses"           "0"
