--- a/Entwatch Files/ze_Pirates_Port_Royal_v5_6.cfg
+++ b/Entwatch Files/ze_Pirates_Port_Royal_v5_6.cfg
@@ -135,8 +135,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "7560944"
 		"mode"              "2"
 		"maxuses"           "0"
