--- a/Entwatch Files/ze_S_A_M_v1_4.cfg
+++ b/Entwatch Files/ze_S_A_M_v1_4.cfg
@@ -118,7 +118,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "640041"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -136,7 +136,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "555550"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -172,7 +172,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "38951"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -190,7 +190,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "39030"
 		"mode"              "2"
 		"maxuses"           "0"
