--- a/Entwatch Files/ze_aepp_nano_grid2_v1.cfg
+++ b/Entwatch Files/ze_aepp_nano_grid2_v1.cfg
@@ -10,7 +10,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "658120"
 		"mode"              "0"
 		"maxuses"           "0"
@@ -28,7 +28,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "651549"
 		"mode"              "0"
 		"maxuses"           "0"
@@ -99,8 +99,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "13798"
 		"mode"              "2"
 		"maxuses"           "0"
