--- a/Entwatch Files/ze_blue_zenith_v0_1.cfg
+++ b/Entwatch Files/ze_blue_zenith_v0_1.cfg
@@ -9,8 +9,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "35930"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -27,8 +27,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "35949"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -45,8 +45,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "35955"
 		"mode"              "2"
 		"maxuses"           "0"
