--- a/Entwatch Files/ze_boredom_v543654.cfg
+++ b/Entwatch Files/ze_boredom_v543654.cfg
@@ -135,8 +135,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "478149"
 		"mode"              "4"
 		"maxuses"           "1"
@@ -153,8 +153,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "478365"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -171,8 +171,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "478383"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -189,8 +189,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "478413"
 		"mode"              "2"
 		"maxuses"           "0"
