--- a/Entwatch Files/ze_castlevania_p1_7.cfg
+++ b/Entwatch Files/ze_castlevania_p1_7.cfg
@@ -68,8 +68,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "116463"
 		"mode"              "1"
 		"maxuses"           "0"
