--- a/Entwatch Files/ze_christmas_infection_p.cfg
+++ b/Entwatch Files/ze_christmas_infection_p.cfg
@@ -117,8 +117,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "381242"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -135,8 +135,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "386892"
 		"mode"              "0"
 		"maxuses"           "0"
@@ -153,8 +153,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "392708"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -171,8 +171,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "399172"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -261,8 +261,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "1028432"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -279,8 +279,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "1062968"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -297,8 +297,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "1104667"
 		"mode"              "0"
 		"maxuses"           "0"
