--- a/Entwatch Files/ze_dark_souls_ptd_v0_4_csgo6.cfg
+++ b/Entwatch Files/ze_dark_souls_ptd_v0_4_csgo6.cfg
@@ -12,7 +12,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "666074"
 		"mode"              "4"
 		"maxuses"           "10"
@@ -30,7 +30,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "666608"
 		"mode"              "4"
 		"maxuses"           "10"
@@ -48,7 +48,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "1561358"
 		"mode"              "4"
 		"maxuses"           "10"
