--- a/Entwatch Files/ze_ffxiv_wanderers_palace_v4_va2.cfg
+++ b/Entwatch Files/ze_ffxiv_wanderers_palace_v4_va2.cfg
@@ -9,7 +9,7 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
+		"chat"              "true"
 		"hud"               "false"
 		"hammerid"          "518101"
 		"mode"              "0"
@@ -27,12 +27,12 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "392538"
 		"mode"              "2"
 		"maxuses"           "0"
-		"cooldown"          ""
+		"cooldown"          "95"
 		"maxamount"         "1"
 	}
 	"2" {
