--- a/Entwatch Files/ze_grau_a03_4.cfg
+++ b/Entwatch Files/ze_grau_a03_4.cfg
@@ -1,7 +1,7 @@
 //Even though all items are set to be hidden on this entwatch, it is so that ebanned players cant pick up powers as z or ct
 
 "entities" {
-	"" {
+	"0" {
 		"name"              "Heal"
 		"shortname"         "Heal"
 		"color"             ""
@@ -19,7 +19,7 @@
 		"cooldown"          "0"
 		"maxamount"         "1"
 	}
-	"" {
+	"1" {
 		"name"              "Zombie Powerup 3"
 		"shortname"         "ZM 3"
 		"color"             ""
@@ -29,15 +29,15 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "377002"
 		"mode"              "0"
 		"maxuses"           "0"
 		"cooldown"          "0"
 		"maxamount"         "1"
 	}
-	"" {
+	"2" {
 		"name"              "Zombie Powerup 1"
 		"shortname"         "ZM 1"
 		"color"             ""
@@ -55,7 +55,7 @@
 		"cooldown"          "0"
 		"maxamount"         "1"
 	}
-	"" {
+	"3" {
 		"name"              "Zombie Powerup 2"
 		"shortname"         "ZM 2"
 		"color"             ""
