--- a/Entwatch Files/ze_gris_v1_13.cfg
+++ b/Entwatch Files/ze_gris_v1_13.cfg
@@ -1,5 +1,7 @@
+//Heal is hidden since it only actually heals on level 4+ but can be picked up on all levels
+
 "entities" {
-	"" {
+	"0" {
 		"name"              "Zombie Item 1"
 		"shortname"         "ZM Item 1"
 		"color"             ""
@@ -9,15 +11,15 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "950903"
 		"mode"              "2"
 		"maxuses"           "0"
 		"cooldown"          "5"
 		"maxamount"         "99"
 	}
-	"" {
+	"1" {
 		"name"              "Zombie Item 2"
 		"shortname"         "ZM Item 2"
 		"color"             ""
@@ -27,15 +29,15 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "945136"
 		"mode"              "0"
 		"maxuses"           "0"
 		"cooldown"          "0"
 		"maxamount"         "99"
 	}
-	"" {
+	"2" {
 		"name"              "Zombie Item 3"
 		"shortname"         "ZM Item 3"
 		"color"             ""
@@ -45,15 +47,15 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "938788"
 		"mode"              "0"
 		"maxuses"           "0"
 		"cooldown"          "0"
 		"maxamount"         "99"
 	}
-	"" {
+	"3" {
 		"name"              "Heal"
 		"shortname"         "Heal"
 		"color"             ""
@@ -63,8 +65,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "true"
 		"forcedrop"         "true"
-		"chat"              "true"
-		"hud"               "true"
+		"chat"              "false"
+		"hud"               "false"
 		"hammerid"          "638075"
 		"mode"              "0"
 		"maxuses"           "0"
