--- a/Entwatch Files/ze_industrial_dejavu_v3_3_3_e2_d.cfg
+++ b/Entwatch Files/ze_industrial_dejavu_v3_3_3_e2_d.cfg
@@ -82,7 +82,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "122959"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -100,7 +100,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "124423"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -118,7 +118,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "129343"
 		"mode"              "2"
 		"maxuses"           "0"
