--- a/Entwatch Files/ze_legoland_crackheads_p2.cfg
+++ b/Entwatch Files/ze_legoland_crackheads_p2.cfg
@@ -9,7 +9,7 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "true"
 		"forcedrop"         "true"
-		"chat"              "false"
+		"chat"              "true"
 		"hud"               "true"
 		"hammerid"          "67314"
 		"mode"              "3"
@@ -27,7 +27,7 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "true"
 		"forcedrop"         "true"
-		"chat"              "false"
+		"chat"              "true"
 		"hud"               "true"
 		"hammerid"          "140208"
 		"mode"              "3"
