--- a/Entwatch Files/ze_lila_panic_escape_v2.cfg
+++ b/Entwatch Files/ze_lila_panic_escape_v2.cfg
@@ -63,8 +63,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "409715"
 		"mode"              "0"
 		"maxuses"           "0"
