--- a/Entwatch Files/ze_paper_escaper_p7.cfg
+++ b/Entwatch Files/ze_paper_escaper_p7.cfg
@@ -81,8 +81,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "2977"
 		"mode"              "0"
 		"maxuses"           "0"
