--- a/Entwatch Files/ze_roof_adventure_v6.cfg
+++ b/Entwatch Files/ze_roof_adventure_v6.cfg
@@ -1,5 +1,3 @@
-// ze_roof_adventure_v6
-
 "entities" {
 	"0" {
 		"name"              "Heal"
@@ -227,7 +225,7 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
+		"chat"              "true"
 		"hud"               "true"
 		"hammerid"          "67731"
 		"mode"              "2"
@@ -281,7 +279,7 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
+		"chat"              "true"
 		"hud"               "true"
 		"hammerid"          "40266"
 		"mode"              "2"
