--- a/Entwatch Files/ze_rush_b_v1_4.cfg
+++ b/Entwatch Files/ze_rush_b_v1_4.cfg
@@ -27,8 +27,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "20085531"
 		"mode"              "3"
 		"maxuses"           "1"
