--- a/Entwatch Files/ze_sandstorm_go_v1_3.cfg
+++ b/Entwatch Files/ze_sandstorm_go_v1_3.cfg
@@ -117,8 +117,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "10753189"
 		"mode"              "0"
 		"maxuses"           "0"
@@ -135,8 +135,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "10831741"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -153,8 +153,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "10912707"
 		"mode"              "2"
 		"maxuses"           "0"
