--- a/Entwatch Files/ze_shroomforest2_p6.cfg
+++ b/Entwatch Files/ze_shroomforest2_p6.cfg
@@ -172,7 +172,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "1670353"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -190,7 +190,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "1682837"
 		"mode"              "2"
 		"maxuses"           "0"
