--- a/Entwatch Files/ze_slender_escape_rc1.cfg
+++ b/Entwatch Files/ze_slender_escape_rc1.cfg
@@ -64,7 +64,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "54062"
 		"mode"              "1"
 		"maxuses"           "0"
@@ -82,7 +82,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "61593"
 		"mode"              "0"
 		"maxuses"           "0"
@@ -118,7 +118,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "347178"
 		"mode"              "0"
 		"maxuses"           "0"
@@ -136,7 +136,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "738270"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -172,7 +172,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "true"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "979587"
 		"mode"              "0"
 		"maxuses"           "0"
