--- a/Entwatch Files/ze_urban_laby_of_death_p2.cfg
+++ b/Entwatch Files/ze_urban_laby_of_death_p2.cfg
@@ -10,7 +10,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "false"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "508277"
 		"mode"              "1"
 		"maxuses"           "0"
@@ -28,7 +28,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "false"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "508505"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -46,7 +46,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "false"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "508516"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -64,7 +64,7 @@
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
 		"chat"              "false"
-		"hud"               "false"
+		"hud"               "true"
 		"hammerid"          "508527"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -207,7 +207,7 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
+		"chat"              "true"
 		"hud"               "false"
 		"hammerid"          "35937"
 		"mode"              "0"
