--- a/Entwatch Files/ze_dreamin_v2_3.cfg
+++ b/Entwatch Files/ze_dreamin_v2_3.cfg
@@ -100,7 +100,7 @@
         "allowtransfer"     "false"
         "forcedrop"         "false"
         "chat"              "true"
-        "hud"               "false"
+        "hud"               "true"
         "hammerid"          "125388"
         "mode"              "2"
         "maxuses"           "0"
@@ -118,7 +118,7 @@
         "allowtransfer"     "false"
         "forcedrop"         "false"
         "chat"              "true"
-        "hud"               "false"
+        "hud"               "true"
         "hammerid"          "319455"
         "mode"              "2"
         "maxuses"           "0"
@@ -136,7 +136,7 @@
         "allowtransfer"     "false"
         "forcedrop"         "false"
         "chat"              "true"
-        "hud"               "false"
+        "hud"               "true"
         "hammerid"          "320373"
         "mode"              "2"
         "maxuses"           "0"
