--- a/Entwatch Files/ze_l0v0l_a7_csgo4.cfg
+++ b/Entwatch Files/ze_l0v0l_a7_csgo4.cfg
@@ -45,8 +45,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "432888"
 		"mode"              "2"
 		"maxuses"           "0"
@@ -63,8 +63,8 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
-		"hud"               "false"
+		"chat"              "true"
+		"hud"               "true"
 		"hammerid"          "433324"
 		"mode"              "2"
 		"maxuses"           "0"
