--- a/Entwatch Files/ze_roof_adventure_v8f.cfg
+++ b/Entwatch Files/ze_roof_adventure_v8f.cfg
@@ -1,5 +1,3 @@
-// ze_roof_adventure_v6
-
 "entities" {
 	"0" {
 		"name"              "Unlimited Ammo"
@@ -209,7 +207,7 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
+		"chat"              "true"
 		"hud"               "true"
 		"hammerid"          "67731"
 		"mode"              "2"
@@ -263,7 +261,7 @@
 		"blockpickup"       "false"
 		"allowtransfer"     "false"
 		"forcedrop"         "false"
-		"chat"              "false"
+		"chat"              "true"
 		"hud"               "true"
 		"hammerid"          "40266"
 		"mode"              "2"
