Included where to download VIDE and what option to use to see maps' entities

--- a/Entwatch Files/Entwatch template with help.cfg
+++ b/Entwatch Files/Entwatch template with help.cfg
@@ -1,4 +1,5 @@
 // Note that you only need to include weapons that actually do something in entwatch files. random weapon_* entities around the map simply placed for player pickup but not actually a map powerup or needed to advance somewhere don't need to be included here. Make a seperate block of settings for EACH weapon, as shown below in examples.
+// In order to make entwatch files, download VIDE (https://developer.valvesoftware.com/wiki/VIDE) and use its "Entity Lump Editor" (the option that shows a Purple block next to a pencil) to open a .bsp of a map
 
 "entities" {
 	"0" {						// This is the number of the powerup. If you have more than 1 powerup in a map, copy everything in this block and add 1 to the number (see examples under for how this should go up.) Always start numbers at 0 and go up by 1 each time
