Fixed targetnames of point_servercommand entities

--- a/Map Stripper/ze_DOOM_p2.cfg
+++ b/Map Stripper/ze_DOOM_p2.cfg
@@ -6,7 +6,7 @@ modify:
 	}
 	insert:
 	{
-	"OnNewGame" "commandCommandsay ** Stripper: Disable Player Control on Final Bridge **12-1"
+	"OnNewGame" "commandsCommandsay ** Stripper: Disable Player Control on Final Bridge **12-1"
 	}
 }
 
