--- a/Map Stripper/ze_bunker_escape_v1_2.cfg
+++ b/Map Stripper/ze_bunker_escape_v1_2.cfg
@@ -6,7 +6,7 @@ modify:
 	}
 	insert:
 	{
-	"OnNewGame" "commandCommandsay ** Stripper: Disable Player Control of Elevators **12-1"
+	"OnNewGame" "zombiesheld1Commandsay ** Stripper: Disable Player Control of Elevators **12-1"
 	}
 }
 
