--- a/Map Stripper/ze_defense3002.cfg
+++ b/Map Stripper/ze_defense3002.cfg
@@ -6,7 +6,7 @@ modify:
 	}
 	insert:
 	{
-	"OnNewGame" "commandCommandsay ** Stripper: Remove Ramp Pushes and Change Field Secret Room **12-1"
+	"OnNewGame" "messageCommandsay ** Stripper: Remove Ramp Pushes and Change Field Secret Room **12-1"
 	}
 }
 
