--- a/Map Stripper/ze_inboxed_sg_v1.cfg
+++ b/Map Stripper/ze_inboxed_sg_v1.cfg
@@ -6,7 +6,7 @@ modify:
 	}
 	insert:
 	{
-	"OnNewGame" "commandCommandsay ** Stripper: Disable Player Control on Moving Platform **12-1"
+	"OnNewGame" "pushscaleCommandsay ** Stripper: Disable Player Control on Moving Platform **12-1"
 	}
 }
 
