--- a/Map Stripper/ze_shroomforest2_p6.cfg
+++ b/Map Stripper/ze_shroomforest2_p6.cfg
@@ -6,7 +6,7 @@ modify:
 	}
 	insert:
 	{
-	"OnNewGame" "commandCommandsay ** Stripper: Disable Dorito Button Bugged Secret **12-1"
+	"OnNewGame" "ServerCommandsay ** Stripper: Disable Dorito Button Bugged Secret **12-1"
 	}
 }
 
