--- a/Map Stripper/ze_roof_adventure_v8.cfg
+++ b/Map Stripper/ze_roof_adventure_v8.cfg
@@ -6,7 +6,7 @@ modify:
 	}
 	insert:
 	{
-	"OnNewGame" "commandCommandsay ** Stripper: Disable 45 Minute Map Time Script **12-1"
+	"OnNewGame" "servercommandCommandsay ** Stripper: Disable 45 Minute Map Time Script **12-1"
 	}
 }
 
